crates/kaban-parser/tests/snapshots/expressions__bubble_up_on_undefined.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x?;

Block [
    BubbleIfErrOrNone(
        Identifier("x"),
    ),
]
