crates/kaban-parser/tests/snapshots/expressions__chaining_method_and_member_access_calls.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: items.iter().enumerate();

Block [
    MethodCall {
        callee: MethodCall {
            callee: Identifier("items"),
            method name: Identifier("iter"),
            is mutable: false,
            args: [],
        },
        method name: Identifier("enumerate"),
        is mutable: false,
        args: [],
    },
]
