crates/kaban-parser/tests/snapshots/expressions__comptime_func_call.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: @foo();

Block [
    CompTimeExpression(
        FuncCall {
            callee: Identifier("foo"),
            args: [],
        },
    ),
]
