crates/kaban-parser/tests/snapshots/expressions__continue_and_break.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: continue; break;

Block [
    Continue,
    Break,
]
