crates/kaban-parser/tests/snapshots/expressions__destruct_method_call.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: destruct Person@<i32>::Core@<i32, f64>.from_id(10);

Block [
    Destruct(
        MethodCall {
            callee: GenericInstantiation {
                callee: ImplAccess {
                    left: GenericInstantiation {
                        callee: Identifier("Person"),
                        args: [
                            Type(I32),
                        ],
                    },
                    right: Identifier("Core"),
                },
                args: [
                    Type(I32),
                    Type(F64),
                ],
            },
            method name: Identifier("from_id"),
            is mutable: false,
            args: [
                IntLit("10"),
            ],
        },
    ),
]
