crates/kaban-parser/tests/snapshots/expressions__do_while_condition_with_bool_condition.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: do {foo(); let x = 10;} while (x == 10);

Block [
    DoWhile {
        block: Block [
            FuncCall {
                callee: Identifier("foo"),
                args: [],
            },
            Let {
                name: IdentifierBinding {
                    name: Identifier("x"),
                    mutable: false,
                },
                assignment: IntLit("10"),
            },
        ],
        condition: Equal {
            left: Identifier("x"),
            right: IntLit("10"),
        },
    },
]
