crates/kaban-parser/tests/snapshots/expressions__empty_block_expression.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: {}

Block [
    Block [],
]
