crates/kaban-parser/tests/snapshots/expressions__for_condition_with_identifier_binding.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: for (i in 1..10) {x += i;}

Block [
    For {
        binding: IdentifierBinding {
            name: Identifier("i"),
            mutable: false,
        },
        iterator: ExclusiveRange {
            left: IntLit("1"),
            right: IntLit("10"),
        },
        block: Block [
            PlusAssignment {
                left: Identifier("x"),
                right: Identifier("i"),
            },
        ],
    },
]
